[build-system]
requires = ["setuptools>=61.0", 
            "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "basic_sort_UNIQUE_SUFFIX"
version = "0.0.1"
authors = [{ name="Kaleb Hannan", email="kaleb.hannan@maine.edu" },
           { name="Johnny Sylvain", email="john.sylvain@maine.edu" },
           { name="Odin York", email="odin.york@maine.edu" },
           { name="Seth Vaughn", email="seth.vaughn@maine.edu" },
           { name="Clark LaChance ", email="clark.lachance@maine.edu" },
]
description = "An exercise in the capstone course to help us learn CI/CD"
readme = "README.md"
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Bug Tracker" = "https://github.com/pypa/python_package_exercise/issues"


