[build-system]
requires = ["setuptools>=61.0", 
            "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "basic_sort_UMaine_COS397_Fike"
version = "0.0.2"
authors = [{ name="Kaleb Hannan", email="kaleb.hannan@maine.edu" },
           { name="Johnny Sylvain", email="john.sylvain@maine.edu" },
           { name="Odin York", email="odin.york@maine.edu" },
           { name="Seth Vaughn", email="seth.vaughn@maine.edu" },
           { name="Clark LaChance ", email="clark.lachance@maine.edu" },
]
description = "An exercise in the capstone course to help us learn CI/CD"
readme = "README.md"
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Bug Tracker" = "https://github.com/pypa/python_package_exercise/issues"


